# vibe_ns

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
deploy/: netserver.service
docs/: ARCHITECTURE.md
src/: main.c
src/core/: args.c  args.h  connection.c  connection.h  connector.c  connector.h  err.h  fsm.c  fsm.h  log.h  macros.h  priv.c  priv.h  server.c  server.h
src/features/: stubs.c  stubs.h
src/features/chat/: chat.c  chat.h  chat_db.c  chat_db.h  http_chat.c  http_chat.h  room.c  room.h
src/games/: game.h
src/games/backgammon/: backgammon.c
src/games/chess/: chess.c
src/protocol/: protocol.c  protocol.h
src/protocol/http/: http_proto.c  http_proto.h  http_session.c  http_session.h
src/protocol/telnet/: telnet_proto.c  telnet_proto.h  telnet_session.c  telnet_session.h  telnet_states.h
src/ui/: ansi.c  ansi.h  bbs.c  bbs.h  menu.c  menu.h
web/: app.js  index.html
